# docs/swagger.yaml
@@ -51,6 +51,8 @@ paths:
             $ref: '#/definitions/MixItUpUser'
         '404':
           description: User not found
+		  schema:
+            $ref: '#/definitions/Error'
     put:
       summary: This API can be used to set user's ViewingMinutes or Currency Amount.  This API can be used with a PATCH as well.
       tags:
@@ -70,8 +72,13 @@ paths:
             $ref: '#/definitions/MixItUpUser'
         '400':
           description: Bad request was sent in
+		  schema:
+            $ref: '#/definitions/Error'
         '404':
           description: User not found
+
+		  schema:
+            $ref: '#/definitions/Error'
           
   '/users':
     post:
@@ -93,6 +100,8 @@ paths:
             $ref: '#/definitions/ListOfMixItUpUsers'
         '400':
           description: Bad request was sent in
+		  schema:
+            $ref: '#/definitions/Error'
 
   '/users/{usernameOrID}/currency/{currencyID}/adjust':
     parameters:
@@ -127,10 +136,16 @@ paths:
             $ref: '#/definitions/MixItUpUser'
         '400':
           description: Bad request was sent in
+		  schema:
+            $ref: '#/definitions/Error'
         '403':
           description: User does not have enough of the chosen currency to remove
+		  schema:
+            $ref: '#/definitions/Error'
         '404':
-          description: User not found
+          description: User or currency not found
+          schema:
+            $ref: '#/definitions/Error'
 
   '/users/{usernameOrID}/inventory/{inventoryID}/adjust':
     parameters:
@@ -165,10 +180,16 @@ paths:
             $ref: '#/definitions/MixItUpUser'
         '400':
           description: Bad request was sent in
+		  schema:
+            $ref: '#/definitions/Error'
         '403':
           description: User does not have enough of the chosen inventory items to remove
+		  schema:
+            $ref: '#/definitions/Error'
         '404':
-          description: User not found
+          description: User or inventory not found
+          schema:
+            $ref: '#/definitions/Error'
 
   '/users/top':
     parameters:
@@ -205,6 +226,31 @@ paths:
           schema:
             $ref: '#/definitions/ListOfMixItUpCurrency'
 
+  '/currency/{currencyID}':
+    parameters:
+      - name: currencyID
+        in: path
+        description: 'The currency ID to query'
+        required: true
+        type: string
+        format: uuid
+    get:
+      tags:
+        - Currency
+      summary: Gets a specific currency
+      operationId: getCurrencyById
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            $ref: '#/definitions/MixItUpCurrency'
+        '404':
+          description: The currency could not be found.
+          schema:
+            $ref: '#/definitions/Error'
+
   '/currency/{currencyID}/top':
     parameters:
       - name: count
@@ -234,6 +280,8 @@ paths:
             $ref: '#/definitions/ListOfMixItUpUsers'
         '404':
           description: The currency could not be found.
+		  schema:
+            $ref: '#/definitions/Error'
 
   '/currency/{currencyID}/give':
     parameters:
@@ -264,8 +312,12 @@ paths:
             $ref: '#/definitions/ListOfMixItUpUsers'
         '400':
           description: Bad request was sent in
+		  schema:
+            $ref: '#/definitions/Error'
         '404':
           description: The currency could not be found.
+		  schema:
+            $ref: '#/definitions/Error'
 
   '/chat/users':
     get:
@@ -331,6 +383,8 @@ paths:
           description: Success
         '400':
           description: Bad request was sent in
+		  schema:
+            $ref: '#/definitions/Error'
 
   '/commands':
     get:
@@ -368,6 +422,8 @@ paths:
             $ref: '#/definitions/MixItUpCommand'
         '404':
           description: The command could not be found.
+		  schema:
+            $ref: '#/definitions/Error'
     post:
       tags:
         - Commands
@@ -386,6 +442,8 @@ paths:
           description: Success
         '404':
           description: The command could not be found.
+		  schema:
+            $ref: '#/definitions/Error'
     put:
       tags:
         - Commands
@@ -407,8 +465,12 @@ paths:
             $ref: '#/definitions/MixItUpCommand'
         '400':
           description: Bad request was sent in
+		  schema:
+            $ref: '#/definitions/Error'
         '404':
           description: The command could not be found.
+		  schema:
+            $ref: '#/definitions/Error'
 
   '/inventory':
     get:
@@ -423,6 +485,30 @@ paths:
           description: Success
           schema:
             $ref: '#/definitions/ListOfMixItUpInventory'
+  '/inventory/{inventoryID}':
+    parameters:
+      - name: inventoryID
+        in: path
+        description: 'The inventory ID to query'
+        required: true
+        type: string
+        format: uuid
+    get:
+      tags:
+        - Inventory
+      summary: Gets a specific inventory
+      operationId: getInventoryById
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            $ref: '#/definitions/MixItUpInventory'
+        '404':
+          description: The inventory could not be found.
+          schema:
+            $ref: '#/definitions/Error'
 
   '/mixplay/broadcast':
     post:
@@ -446,8 +532,16 @@ paths:
           description: Success
         '400':
           description: Invalid data submitted
+		  schema:
+            $ref: '#/definitions/Error'
 
   '/mixplay/user/{participantIDOrUserNameOrUserId}':
+    parameters:
+      - name: participantIDOrUserNameOrUserId
+        in: path
+        description: 'The participant ID, UserName, or UserId ID to query'
+        required: true
+        type: string
     get:
       tags:
         - MixPlay
@@ -470,6 +564,8 @@ paths:
             $ref: '#/definitions/MixPlayUser'
         '404':
           description: User not found
+		  schema:
+            $ref: '#/definitions/Error'
 
   '/mixplay/users':
     get:
@@ -510,6 +606,8 @@ paths:
             $ref: '#/definitions/MixerUser'
         '404':
           description: User not found
+		  schema:
+            $ref: '#/definitions/Error'
 
 definitions:
   MixPlayUser:
@@ -805,3 +903,11 @@ definitions:
   MixerUser:
     type: object
     description: See Mixer docs
+
+	Error:
+    type: object
+    required: [ Message ]
+    properties:
+      Message:
+        description: "A description of the problem."
+        type: string
